Change uid/gid of time_daemon
time-services: Start time_daemon service from common rc

Currently, time_daemon service is running after statsd
service which is causing some xTS failure. The patch
moves time_daemon service definition to common rc file
so that daemon can start early.

Signed-off-by: Melvin <kartik3163@gmail.com>

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -1131,10 +1131,11 @@ service poweroffhandler /vendor/bin/poweroffhandler
 on property:vendor.display.lcd_density=*
     setprop ro.sf.lcd_density ${vendor.display.lcd_density}
 
-service time_daemon /vendor/bin/time_daemon
+service vendor.time_daemon /vendor/bin/time_daemon
     class main
-    user root
-    group root
+    user system
+    group system
+    writepid /dev/cpuset/system-background/tasks
 
 # Set vendor-ril lib path based on Meta version
 on property:vendor.rild.libpath=*
