--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -1003,7 +1003,8 @@ service profiler_daemon /system/bin/profiler_daemon
 
 service charger /sbin/chargeonlymode
     class charger
-    group system graphics
+    user system
+    group system graphics input
     capabilities SYS_BOOT
     seclabel u:r:healthd:s0
 
