Override sensors-hal-1.0
huaqin add sensors hal into input group, rather add stock
android.hardware.sensors@1.0-service.rc, override it in init.qcom.rc

Signed-off-by: Dede Dindin Qudsy <xtrymind@gmail.com>
Signed-off-by: Melvin <kartik3163@gmail.com>

--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -1164,3 +1164,11 @@ service vendor.wifilearner /vendor/bin/wifilearner
     user wifi
     group wifi
     oneshot
+
+service vendor.sensors-hal-1-0 /vendor/bin/hw/android.hardware.sensors@1.0-service
+    override
+    class hal
+    user system
+    group system wakelock input
+    capabilities BLOCK_SUSPEND
+    rlimit rtprio 10 10
