--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -1004,6 +1004,7 @@ service profiler_daemon /system/bin/profiler_daemon
 service charger /sbin/chargeonlymode
     class charger
     group system graphics
+    capabilities SYS_BOOT
     seclabel u:r:healthd:s0
 
 service vendor.ssr_diag /vendor/bin/ssr_diag
