--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -312,10 +312,10 @@ on post-fs-data
     chmod 0644 /mnt/vendor/persist/flag/cid.txt
     chown system system /mnt/vendor/persist/flag/colorid.txt
     chmod 0644 /mnt/vendor/persist/flag/colorid.txt
-    /* Huaqin add for MULTI SIM by jindaolun at 2018/3/1 start*/
+    # Huaqin add for MULTI SIM by jindaolun at 2018/3/1 start
     chown system system /mnt/vendor/persist/flag/multisim.txt
     chmod 0644 /mnt/vendor/persist/flag/multisim.txt
-    /* Huaqin add for MULTI SIM by jindaolun at 2018/3/1 end*/
+    # Huaqin add for MULTI SIM by jindaolun at 2018/3/1 end
 
     # Huaqin add for ZQL1650-126 CountryCode by yangzhiyuan at 2018/01/23 end
 
@@ -661,7 +661,7 @@ service vendor.bt_logger /system/bin/bt_logger
 service ftmd /system/bin/logwrapper /system/bin/ftmdaemon
     class late_start
     user root
-    group bluetooth net_bt_admin misc net_bt_stack diag net_bt
+    group bluetooth net_bt_admin misc diag net_bt
     disabled
     oneshot
 
